<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_make_bob"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.yesjam.bobtogether.MakeBobActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/make_bob_img"
                android:layout_width="@dimen/make_bob_img_size"
                android:layout_height="@dimen/make_bob_img_size"
                android:layout_margin="10dp"
                android:src="@drawable/ramen" />

            <Button
                android:id="@+id/make_bob_send_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/make_bob_margin"
                android:layout_marginRight="@dimen/make_bob_margin"
                android:layout_marginTop="@dimen/make_bob_margin"
                android:background="@drawable/black_border_btn"
                android:text="@string/make_bob_btn"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/make_bob_margin"
            android:layout_marginRight="@dimen/make_bob_margin"
            android:layout_marginTop="@dimen/make_bob_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/make_bob_date_picker"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/black_border"
                android:gravity="center"
                android:hint="@string/make_bob_date_picker_hint" />

            <View
                android:layout_width="10dp"
                android:layout_height="@dimen/_0dp" />

            <TextView
                android:id="@+id/make_bob_time_picker"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/black_border"
                android:gravity="center"
                android:hint="@string/make_bob_time_picker_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/make_bob_margin"
            android:layout_marginRight="@dimen/make_bob_margin"
            android:layout_marginTop="@dimen/make_bob_margin">

            <TextView
                android:layout_width="@dimen/_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/make_bob_p_num"
                android:textColor="@color/black" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/make_bob_number_picker"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="2"
                app:np_dividerColor="@color/black"
                app:np_height="50dp"
                app:np_max="50"
                app:np_min="2"
                app:np_orientation="horizontal"
                app:np_selectedTextColor="@color/black"
                app:np_textColor="@color/black"
                app:np_value="2"
                app:np_width="150dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/make_bob_palce_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/make_bob_margin"
            android:layout_marginRight="@dimen/make_bob_margin"
            android:layout_marginTop="@dimen/make_bob_margin"
            android:background="@drawable/et"
            android:gravity="center"
            android:hint="@string/make_bob_place"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/make_bob_title_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/make_bob_margin"
            android:background="@drawable/et"
            android:gravity="center"
            android:hint="@string/make_bob_title_hint"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
