<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_text_margin"
                android:text="@string/setting_profile"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:background="@drawable/setting_sub_layout"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/setting_profile_size"
                    android:layout_height="@dimen/setting_profile_size"
                    android:layout_margin="@dimen/setting_profile_margin"
                    android:src="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profile_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/profile_nickName_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/setting_profile_nick_name_hint"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/profile_email_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/profile_state_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/setting_profile_state_hint"
                        android:textColor="@color/black"
                        android:textSize="15dp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_text_margin"
                android:text="@string/setting_general"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:background="@drawable/setting_sub_layout"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/setting_editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_size"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/setting_edit_profile"
                        android:textColor="@color/black"
                        android:textSize="@dimen/setting_text_size" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/setting_margin"
                    android:layout_marginRight="@dimen/setting_margin"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/setting_setLocation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_size"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/setting_set_location"
                        android:textColor="@color/black"
                        android:textSize="@dimen/setting_text_size" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/setting_margin"
                    android:layout_marginRight="@dimen/setting_margin"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/setting_push_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_size"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/setting_push_toggle"
                        android:textColor="@color/black"
                        android:textSize="@dimen/setting_text_size" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="@dimen/setting_margin"
                    android:layout_marginRight="@dimen/setting_margin"
                    android:background="@color/black" />


                <LinearLayout
                    android:id="@+id/setting_signOut"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/setting_item_size"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/setting_signout"
                        android:textColor="@color/black"
                        android:textSize="@dimen/setting_text_size" />

                </LinearLayout>

                <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0.5dp"-->
                <!--android:layout_marginLeft="@dimen/setting_margin"-->
                <!--android:layout_marginRight="@dimen/setting_margin"-->
                <!--android:background="@color/black" />-->

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_text_margin"
                android:text="@string/setting_opensource"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:background="@drawable/setting_sub_layout"
                android:orientation="vertical">

                <include layout="@layout/open_source" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/setting_text_margin"
                android:text="@string/setting_eom"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="@dimen/main_margin"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:background="@drawable/setting_sub_layout"
                android:orientation="vertical">


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>